tests/ui/const-generics/associated-const-bindings/using-fnptr-as-type_const.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/using-fnptr-as-type_const.rs:7:19
   |
LL |     type const F: fn();
   |                   ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0741`.
